# checkov

./: .aikido  .bandit  .cfnlintrc  .coveragerc  .dockerignore  .flake8  .gitignore  .gitlab-ci.yml  .gitmodules  .gitpod.Dockerfile  .gitpod.yml  .isort.cfg  .pre-commit-config.yaml  .pre-commit-hooks.yaml  20231129-171954_iac.csv  20240604-122959_iac.csv  20240604-144849_iac.csv  20240604-144849_oss_packages.csv  20240617-203703_iac.csv  20240617-204521_iac.csv  20240617-211156_iac.csv  20251117-111144_iac.csv  20251210-111901_container_images.csv  20251210-111901_iac.csv  20251215-110839_iac.csv  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.pyston  INTHEWILD.md  LICENSE  Manifest.in  PR_DESCRIPTION.md  Pipfile  README.md  SECURITY.md  checkov.spec  dangerfile.ts  (+13 more)
.circleci/: config.yml
.clinerules/: 02-github-workflow.md  03-dev-workflow.md  04-testing.md  05-commit-messages.md  06-pr-template.md
.github/: PULL_REQUEST_TEMPLATE.md  actionlint.yaml  checkov.yaml  codeql-config.yml  dependabot.yml  exclude-patterns.txt  pr-title-checker-config.json  release-changelog-config.json  stale.yml
.swm/: creating-a-solver.gm0ti.sw.md  swimm.json
HomebrewFormula/: checkov.rb
aa/: index.js  package.json
admissioncontroller/: .gitignore  Dockerfile  LICENSE  README.md  checkov-requirements.txt  requirements.txt  setup.sh  whorf.py  wsgi.py
bridgecrew/: blurb.py  main.py
cdk_integration_tests/: prepare_data.sh  run_integration_tests.sh  test_checks_python.py  test_checks_typescript.py  utils.py
checkov/: blablalbla.yml  command_to_terminal.txt  compute_config.py  config.py  contributor_metrics.py  docs_generator.py  fb_version.py  first.json  logging_init.py  main.py  runner_filter.py  test.py  version.py
checkovignore/: .checkovignore  checkov_ignore.py
cicd/: ci.sh  dev_ci.sh  run_unittests.sh  tag.sh
docs/: 404.md  CNAME  Gemfile  README.md  _config.yml  documentation.md  hts-log.txt  index.html  menus.json  resource_scans  search.html  search_data.json
docs_v2/: docusaurus.config.js  package.json
dogfood_tests/: pytest.ini  test_checkov_dogfood.py
github_action_resources/: checkov-problem-matcher-softfail.json  checkov-problem-matcher.json  entrypoint.sh
hooks/: checkov.sh
iam/: backend.tf  iam.tf  provider.tf  variables.tf
integration_tests/: prepare_data.sh  run_integration_tests.sh  test_checkov_cli_integration_report.py  test_checkov_config.py  test_checkov_cyclonedx_report.py  test_checkov_ext_module_cloning.py  test_checkov_github_configuration.py  test_checkov_json_report.py  test_checkov_junit_report.py  test_checkov_platform_only_policies.py  test_checkov_report_terragoat.py  test_checkov_sarif_report.py
kubernetes/: Dockerfile  README.md  checkov-cronjob.yaml  checkov-job.yaml  requirements.txt  (+2 more)
(+11274 files in other folders)
